css/styles.css
/* ... */
.backdrop.is-open {
    opacity: 1;
    visibility: visible;
    pointer-events: auto;
}

.modal {
    position: absolute;
    top: 50%;
    left: 50%;

    width: 408px;
    min-height: 584px;
    border-radius: 4px;
    padding: 72px 24px 24px;

    transform: translate(-50%, -50%);

    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
    background-color: var(--dairy);

    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.backdrop:not(.is-open) .modal {
    transform: translate(-50%, -100%);
}

.modal-close-btn {
    position: absolute;
    top: 24px;
    right: 24px;
    width: 24px;
    height: 24px;
    background-color: var(--cornflower);
    border: 1px solid rgba(0, 0, 0, 0.1);
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}
.modal-close-btn .icon{
    fill: var(--navy-blue);
    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
}
.modal-close-btn:hover,
.modal-close-btn:focus {
    background-color: var(--ocean);
}
.modal-close-btn:hover .icon,
.modal-close-btn:focus .icon{
    fill: var(--white);
}
/* #endregion */

/* #region Order Form */
.modal-title {
    font-weight: 500;
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.02em;
    text-align: center;
    color: var(--navy-blue);
    margin: 32px auto 16px;
}

.order-form-field:not(:last-child) {
    margin-bottom: 8px;
}

.order-form-label {
    font-weight: 400;
    font-size: 12px;
    line-height: 1.16667;
    letter-spacing: 0.04em;
    color: var(--light-slate);
}

.order-form-field-input-wrap {
    border: 1px solid rgba(46, 47, 66, 0.4);
    border-radius: 4px;
    width: 100%;
    min-height: 40px;
    display: flex;
    align-items: center;
    justify-content: flex-start;
    /* padding: 8px 16px; */
    gap: 4px;
}

.order-form-field-input-wrap:focus-within {
    border-color: var(--iris);
}

.order-form-field-input-icon-wrap {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-basis: 18px;
    height: 100%;
    margin-left: 16px;
}

.order-form-field-input-wrap .icon {
    fill: var(--navy-blue);
}

.order-form-field-input-wrap:focus-within .icon {
    fill: var(--iris);
}

.order-form-input {
    padding: 0;
    border: none;
    height: 100%;
    flex-grow: 1;
    padding: 8px 16px 8px 0;
}

.order-form-input:focus-visible {
    outline: none;
}

textarea.order-form-input {
    height: 102px;
    resize: none;
    background-color: var(--dairy);
    resize: none;
    padding: 8px 16px;
}

textarea.order-form-input::placeholder {
    font-weight: 400;
    font-size: 12px;
    line-height: 1.16667;
    letter-spacing: 0.04em;
    color: var(--navy-blue-modal);
}

.order-form-label .link {
    line-height: 1.33333;
    text-decoration: underline;
    text-decoration-skip-ink: none;
    color: var(--iris);
}

.order-form-field input[type="checkbox"]+.order-form-label {
    display: flex;
    align-items: center;
    gap: 8px;
    margin: 16px 0 24px;
}

.order-form-field input[type="checkbox"] + .order-form-label .checbox-box {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 16px;
    height: 16px;
    border-radius: 2px;
    border: 1px solid var(--navy-blue-modal);
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.order-form-field input[type="checkbox"] + .order-form-label .checbox-box .icon {
    fill: transparent;
    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.order-form-field input[type="checkbox"]:checked + .order-form-label .checbox-box {
    background-color: var(--iris);
}

.order-form-field input[type="checkbox"]:checked + .order-form-label .checbox-box .icon {
    fill: var(--cloud);
}

/* #endregion */

